--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.rtl.css
@@ -25,7 +25,7 @@
   border-radius: 10px;
   box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.43);
   width: 100%;
-  min-height: 400px;
+  height: 400px;
   display: -webkit-flex;
   display: -ms-flex;
   display: flex;
