--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.less
@@ -256,6 +256,29 @@
                 }
             }
         }
+
+        .buttons {
+            text-align: center;
+            margin-top: 24px;
+
+            .prev {
+                -moz-transform: rotate(180deg) /*rtl:rotate(0)*/;
+                -ms-transform: rotate(180deg) /*rtl:rotate(0)*/;
+                -o-transform: rotate(180deg) /*rtl:rotate(0)*/;
+                -webkit-transform: rotate(180deg) /*rtl:rotate(0)*/;
+                transform: rotate(180deg) /*rtl:rotate(0)*/;
+            }
+
+            button[disabled] md-icon {
+                fill: @textColorGrey;
+            }
+
+            md-icon {
+                fill: @buttonColorBlue;
+                width: 40px;
+                height: 40px;
+            }
+        }
     }
 
     .md-thumb {
