--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.less
@@ -180,6 +180,8 @@
 
             &.both .card-content {
                 .card-content .side {
+                    width: 50%;
+
                     img {
                         width: initial;
                         max-width: 100%;
