--- a/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/Index.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/Index.cshtml
@@ -9,8 +9,8 @@
                       }"></ng-pluralize>
             <div class="buttons">
                 <button type="button" class="action-btn" ng-click="f.start()">start</button>
-                <button type="button" class="action-btn" ng-if="::f.pinCount" ng-click="f.startPin()">
-                    Study <ng-pluralize count="::f.pinCount"
+                <button type="button" class="action-btn pinned-cards" ng-if="::f.pinCount" ng-click="f.startPin()">
+                    Study&nbsp;<ng-pluralize count="::f.pinCount"
                                         when="{
                         '1': '1 pin',
                         'other': '{} pinned'
