--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.less
@@ -50,10 +50,11 @@
             margin: 0 0 18px 0;
         }
 
-        ng-pluralize {
+        .subtitle {
             display: block;
             margin-bottom: 30px;
             color: @textColorGrey;
+            font-size: 16px;
         }
 
         .action-btn {
@@ -70,7 +71,7 @@
             .displayFlex;
             .align-items(center);
             .justifyContet(center);
-            margin-top: 10px;
+            margin-top: 30px;
             color: @textColorGrey;
 
             md-switch {
@@ -309,14 +310,23 @@
         }
     }
 
-    .subtitle {
-        .displayFlex;
-        .align-items(center);
-        .justifyContet(center);
+    .step-3 {
+        .subtitle {
+            .displayFlex;
+            .align-items(center);
+            .justifyContet(center);
 
-        h4, ng-pluralize {
-            margin: 0;
-            color: @textColorGrey;
+            h4 {
+                margin: 0;
+            }
+        }
+
+        .like-wrapper {
+            position: absolute;
+            bottom: 18px;
+            left: 0;
+            right: 0;
+            margin: 0 auto;
         }
     }
 
