--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.less
@@ -32,6 +32,7 @@
         .align-items(stretch);
         .justifyContet(center);
         flex-direction: column;
+        position: relative;
     }
 
     .step-1, .step-3 {
