Some fixes in flashcard.

--- a/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/Index.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/Index.cshtml
@@ -53,7 +53,7 @@
                 </button>
             </div>
         </div>
-        <div class="card-template" ng-init="f.style=true" ng-class="{front: f.style==true,back:f.style==false,both:f.style==null}">
+        <div class="card-template" ng-class="{front: f.style==true,back:f.style==false,both:f.style==null}">
             <button type="button" class="pin-btn" ng-click="f.pin()" ng-class="{pinned:f.slide.pin}">
                 <md-icon md-svg-icon="b:pin"></md-icon>
             </button>
